# TAlib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DevLog.md  LICENSE  README.md  README_EN.md  README_ZH.md  design.md  main.cc  test.txt  开发记录.md  设计特性.md  面试问题.md
Http/: HttpConnection.cc  HttpConnection.h  Mimetype.cc  Server.cc  Server.h
Log/: FileUtil.h  FixedBuffer.h  LogFile.h  LogStream.cc  Logging.cc  Logging.h
MemPool/: MemPool.cc  MemPool.h
Mutex/: MutexLock.h
NOuse/: HttpServer.cpp  HttpServer.hpp
NotInUse/: HttpServer.cpp  HttpServer.h
Reactor/: Channel.cc  Channel.h  Epoll.h  EventLoop.cc  TimerManager.h
Tcp/: TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h
Threadpool/: Thread.h  ThreadpoolEventLoop.h
Wrapper/: Wrapper.cc  wrapper.h
example/: AsyncLogging_example.cpp  CMakeLists.txt  example_server.cpp  http_server_example.cpp  httpserver.cpp  mysql_pool_example.cpp  redis_pool_example.cpp  static_server_example.cpp  tcp_server_example.cpp
example/Http/: HttpServer.cpp  HttpServer.h
example/NoUse/: HttpServer (2).cpp  HttpServer.h  Makefile  httpserver.cpp  main.cpp
example/sudoku/: CMakeLists.txt  batch.cc  loadtest.cc  percentile.h  pipeline.cc  server_basic.cc  server_hybrid.cc  server_multiloop.cc  server_prod.cc  server_threadpool.cc  stat.h  stat_unittest.cc  sudoku.cc  sudoku.h
src/Http/: HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  Mimetype.h
src/Logger/: AsyncLogging.cpp  AsyncLogging.h  AsyncLogging.hpp  Condition.hpp  FileUtil.cpp  FileUtil.h  LogFile.cpp  LogFile.h  LogStream.h  Logger.cpp  Logger.h  Logger.hpp  Thread.cpp  TimeStamp.cpp
src/MySQL/: pool.cpp  pool.h
src/Reactor/: Acceptor.cpp  Acceptor.h  Acceptor.hpp  Channel.cpp  Channel.h  CurrentThread.cpp  CurrentThread.h  EventLoop.cpp  EventLoop.h  EventLoop.hpp  EventLoopThread.cpp  EventLoopThread.h  EventLoopThread.hpp  EventLoopThreadPool.cpp  EventLoopThreadPool.h  EventLoopThreadPool.hpp  Poll.cpp  Poll.h  Poll.hpp  Poller.cpp  Poller.h  Poller.hpp  Reactor.h  Reactor.hpp  Timer.cpp  Timer.h  Timer.hpp  TimerId.h  TimerQueue.cpp  TimerQueue.h  TimerQueue.hpp
src/Redis/: RedisCache.cpp  RedisCache.h  RedisConnect.h  ResPool.h
src/Socket/: Epoll.cpp  Epoll.h  Epoll.hpp  InetAddress.cpp  Socket.cpp  SocketHelp.cpp
src/Tcp/: TcpConnection.cpp  TcpConnection.h  TcpConnection.hpp  TcpServer.cpp  TcpServer.h  TcpServer.hpp
src/cache/: LFUCache.cpp  LFUCache.h
src/common/: Buffer.cpp  Buffer.h  CallBacks.h  CallBacks.hpp  S.h  TimeStamp.cpp  TimeStamp.h  noncopyable.h
tempdoc/: 面试问题.md
webbench/: tags  webbench
www/: index.html
www/css/: amazeui.min.css  login.css  main.css
www/js/: neko.js
www/lg/: 1  chat.vue  lgcahtpage.php  neko.js  p2pchat.js  time.js  video.js  video_connecter.js  voice_connecter.js  voice_tools.js  ws_main.js
